
NULL =
EXTRA_DIST = \
	font_authimage.png \
	font_linuxfr.png \
	font_phpbb.png \
	font_slashdot.png \
	font_vbulletin.png \
	font_freesans_24_09AZ.bmp \
	font_comic_24_az_messed.bmp \
	font_comic_32_az.bmp \
	font_freemonobold_24_az.bmp \
	font_freemonobold_32_az.bmp \
	font_freesans_24_09AZ.bmp \
	font_freesansbold_32_az.bmp \
	font_freesansbold_36_az_messed.bmp \
	font_stencil_23_AZ.bmp \
	font_stencil_24_AZ.bmp \
	x_font_comic_24_az_messed.bmp \
	x_font_comic_32_az.bmp \
	x_font_freemonobold_24_az.bmp \
	x_font_freemonobold_32_az.bmp \
	x_font_freesansbold_32_az.bmp \
	x_font_freesansbold_36_az_messed.bmp \
	$(NULL)

