
DECODER = xanga

noinst_LIBRARIES = libdecoder.a

libdecoder_a_SOURCES = decoder.c
libdecoder_a_CPPFLAGS = -I$(srcdir)/.. -DDECODER=\"$(DECODER)\"

EXTRA_DIST = \
    comic_24_az_messed.bmp \
    comic_32_az.bmp \
    freemonobold_24_az.bmp \
    freemonobold_32_az.bmp \
    freesansbold_32_az.bmp \
    freesansbold_36_az_messed.bmp \
    x_comic_24_az_messed.bmp \
    x_comic_32_az.bmp \
    x_freemonobold_24_az.bmp \
    x_freemonobold_32_az.bmp \
    x_freesansbold_32_az.bmp \
    x_freesansbold_36_az_messed.bmp

